docs/1.x/advanced/events.md
# Events
Events are an implementation of observer pattern such that whenever an event takes place, then one or more listener(s) associated with that event responds. Imagine something like making an announcement to your application, and then actions being taken due to that announcement. All the event classes in Bagisto are stored in the **Providers** folder and the listeners are stored in the **Listeners** folder.

## How to create Event Class?

If you have the Bagisto Package Generator installed, then you can use the following command which will create a new event class in `packages/ACME/TestPackage/src/Events` directory.

Please follow the following steps to create a new event class in your `packages/ACME/TestPackage`

1. We assume that you have created a new TestPackage using Bagisto Package Generator like the below command.

`php artisan package:make ACME/TestPackage`

2. Now, you can create a event `Events\TestEvent.php` class using the below command.

`php artisan package:make-event TestEvent ACME/TestPackage`

If event class already present then you can use force command for overwriting by passing `--force` option.

`php artisan package:make-event TestEvent ACME/TestPackage --force`

Or if you don't have package generator then, you can create file manually also.

## How to create Listener Class?

If you have the Bagisto Package Generator installed, then you can use the following command which will create a new listener class in `packages/ACME/TestPackage/src/Listeners` directory.

`php artisan package:make-listener TestListener ACME/TestPackage`

If listener class already present then you can use force command for overwriting.

`php artisan package:make-listener TestListener ACME/TestPackage --force`

Or if you don't have package generator then, you can create file manually also.

## Manually Registering Events

For the sake of simplicity, in bagisto, we register events manually in the boot method of your **_EventServiceProvider.php_** as below:

~~~php
/**
* Register any other events for your application.
*
* @return void
*/

public function boot()
{
    parent::boot();

    Event::listen('event.name', 'path-upto-listener@function');
}
~~~

## Manually Registering Listeners

In registering events, we specify listener function to be executed when an event is called so on every event a listener function is to be executed

~~~php
class EventServiceProvider extends ServiceProvider
{
    /**
    * Bootstrap services.
    *
    * @return void
    */
    public function boot()
    {
        Event::listen('checkout.order.save.after', 'Webkul\Admin\Listeners\Order@sendNewOrderMail');
    }
}
~~~

### How we specify events?

In most of **CRUD** operation, we had fired an event before and after the execution of function. So, that if some one want to perform any operation after or before product create/update/delete can perform by simply calling a listener function in event registration

## Events Fired in Bagisto

Events fired in bagisto but not listened such that if any user wants to perform any action on event fire, then they may create listener file and perform the respective operation.

| Events name                  | Functionality|
| ------------------------------- | ------------- |
|core.configuration.save.before|This event will be fired before core configuration form data gets saved, then you may create a listener file and perform the respective operation when that event fires  |
|core.configuration.save.after|This event will be fired after core configuration form data gets saved, then you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.add.before |This event will be fired before saving into the  database of item added in checkout and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.add.after|This event will be fired after saving into the  database of item added in checkout and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.update.before|This event will be fired before updating the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires  |
|checkout.cart.item.update.after|This event will be fired after updating the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.delete.before|This event will be fired before deleting the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.delete.after|This event will be fired after deleting the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.delete.before|This event will be fired before deleting the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.delete.after|This event will be fired after deleting the database item of checkout table of respective passed `id` and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.move-to-wishlist.before|This event will be fired before adding cart item to wishlist added in checkout and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.item.move-to-wishlist.after|This event will be fired after adding cart item to wishlist added in checkout and you may create a listener file and perform the respective operation when that event fires|
|customer.registration.before|This event will be fired before registration of customer details and you may create a listener file and perform the respective operation when that event fires|
|customer.registration.after|This event will be fired after registration of customer details and you may create a listener file and perform the respective operation when that event fires|
|customer.after.login|This event will be fired after login of customer and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.create.before|This event will be fired before attribute family gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.create.after|This event will be fired after attribute family gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.update.before|This event will be fired before updating attribute family and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.update.after|This event will be fired after updating attribute family and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.delete.before|This event will be fired before deleting attribute family and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute_family.delete.after|This event will be fired after deleting attribute family and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.create.before|This event will be fired before attribute gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.create.after|This event will be fired after attribute gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.update.before|This event will be fired before attribute gets updated and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.update.after|This event will be fired after attribute gets updated and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.delete.before|This event will be fired before attribute gets deleted and you may create a listener file and perform the respective operation when that event fires|
|catalog.attribute.delete.after|This event will be fired after attribute gets deleted and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.delete.after|This event will be fired after deleting category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.delete.before|This event will be fired before deleting category with mass selection and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.delete.after|This event will be fired after deleting category with mass selection and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.create.before|This event will be fired before creating category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.create.after|This event will be fired after creating category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.update.before|This event will be fired before updating category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.update.after|This event will be fired after updating category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.delete.before|This event will be fired before deleting category and you may create a listener file and perform the respective operation when that event fires|
|catalog.category.delete.after|This event will be fired after deleting category and you may create a listener file and perform the respective operation when that event fires|
|core.channel.create.before|This event will be fired before channel gets created and you may create a listener file and perform the respective operation when that event fires|
|core.channel.create.after|This event will be fired after channel gets created and you may create a listener file and perform the respective operation when that event fires|
|core.channel.update.before|This event will be fired before channel gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.channel.update.after|This event will be fired after channel gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.channel.delete.before|This event will be fired before channel gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.channel.delete.after|This event will be fired after channel gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.currency.create.before|This event will be fired before currency gets created and you may create a listener file and perform the respective operation when that event fires|
|core.currency.create.after|This event will be fired after currency gets created and you may create a listener file and perform the respective operation when that event fires|
|core.currency.update.before|This event will be fired before currency gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.currency.update.after|This event will be fired after currency gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.currency.delete.before|This event will be fired before currency gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.currency.delete.after|This event will be fired after currency gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.currency.delete.before|This event will be fired before currency gets deleted with mass selection and you may create a listener file and perform the respective operation when that event fires|
|core.currency.delete.after|This event will be fired after currency gets deleted with mass selection and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.create.before|This event will be fired before exchange rate gets created and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.create.after|This event will be fired after exchange rate gets created and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.update.before |This event will be fired before exchange rate gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.update.after|This event will be fired after exchange rate gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.delete.before|This event will be fired before exchange rate gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.exchange_rate.delete.after|This event will be fired after exchange rate gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.locale.create.before|This event will be fired before locale gets created and you may create a listener file and perform the respective operation when that event fires|
|core.locale.create.after|This event will be fired after locale gets created and you may create a listener file and perform the respective operation when that event fires|
|core.locale.update.before|This event will be fired before locale gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.locale.update.after|This event will be fired after locale gets updated and you may create a listener file and perform the respective operation when that event fires|
|core.locale.delete.before|This event will be fired before locale gets deleted and you may create a listener file and perform the respective operation when that event fires|
|core.locale.delete.after|This event will be fired after locale gets deleted and you may create a listener file and perform the respective operation when that event fires|
|customer.registration.before|This event will be fired before customer gets registered and you may create a listener file and perform the respective operation when that event fires|
|customer.registration.after|This event will be fired after customer gets registered and you may create a listener file and perform the respective operation when that event fires|
|customer.after.login|This event will be fired after customer successfully logins in store and you may create a listener file and perform the respective operation when that event fires|
|customer.after.logout|This event will be fired after customer successfully logouts from store and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.create.before|This event will be fired before inventory source gets created and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.create.after|This event will be fired after inventory source gets created and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.update.before|This event will be fired before inventory source gets updated and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.update.after|This event will be fired after inventory source gets updated and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.delete.before|This event will be fired before inventory source gets deleted and you may create a listener file and perform the respective operation when that event fires|
|inventory.inventory_source.delete.after|This event will be fired after inventory source gets deleted and you may create a listener file and perform the respective operation when that event fires|
|customer.review.update.before|This event will be fired before customer review gets updated and you may create a listener file and perform the respective operation when that event fires|
|customer.review.update.after|This event will be fired after customer review gets updated and you may create a listener file and perform the respective operation when that event fires|
|customer.review.delete.before|This event will be fired before customer review gets deleted and you may create a listener file and perform the respective operation when that event fires|
|customer.review.delete.after|This event will be fired after customer review gets deleted and you may create a listener file and perform the respective operation when that event fires|
|customer.review.delete.before|This event will be fired before customer review gets deleted with mass selection and you may create a listener file and perform the respective operation when that event fires|
|customer.review.delete.after|This event will be fired after customer review gets deleted with mass selection and you may create a listener file and perform the respective operation when that event fires|
|customer.review.update.before|This event will be fired before customer review gets updated with mass selection and you may create a listener file and perform the respective operation when that event fires|
|customer.review.update.after|This event will be fired after customer review gets updated with mass selection and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.create.before|This event will be fired before product gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.create.after|This event will be fired after product gets created and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.update.before|This event will be fired before product gets updated and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.update.after|This event will be fired after product gets updated and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.delete.before|This event will be fired before product gets deleted and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.delete.after|This event will be fired after product gets deleted and you may create a listener file and perform the respective operation when that event fires|
|sales.invoice.save.before|This event will be fired before invoice gets created and you may create a listener file and perform the respective operation when that event fires|
|sales.invoice.save.after|This event will be fired after invoice gets created and you may create a listener file and perform the respective operation when that event fires|
|checkout.order.save.before|This event will be fired before order gets created and you may create a listener file and perform the respective operation when that event fires|
|checkout.order.save.after|This event will be fired after order gets created and you may create a listener file and perform the respective operation when that event fires|
|sales.order.cancel.before|This event will be fired before order gets cancelled and you may create a listener file and perform the respective operation when that event fires|
|sales.order.cancel.after|This event will be fired after order gets cancelled and you may create a listener file and perform the respective operation when that event fires|
|catalog.product.update.after|This event will be fired after product gets updated and you may create a listener file and perform the respective operation when that event fires|
|sales.shipment.save.before|This event will be fired before shipment for product gets created and you may create a listener file and perform the respective operation when that event fires|
|sales.shipment.save.after|This event will be fired after shipment for product gets created and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.add.before|This event will be fired before product get added in cart and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.add.after|This event will be fired after product get added in cart and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.delete.before|This event will be fired before product get deleted from cart and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.delete.after|This event will be fired after product get deleted from cart and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.update.before|This event will be fired before cart item get updated and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.update.after|This event will be fired after cart item get updated and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.add.before|This event will be fired before configurable product get added in cart and you may create a listener file and perform the respective operation when that event fires|
|checkout.cart.add.after|This event will be fired after configurable product get added in cart and proceeded to but the product and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.create.before|This event will be fired before tax category gets created and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.create.after|This event will be fired after tax category gets created and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.update.before|This event will be fired before tax category gets updated and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.update.after|This event will be fired after tax category gets updated and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.delete.before|This event will be fired before tax category gets deleted and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_category.delete.after|This event will be fired after tax category gets deleted and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.create.before|This event will be fired before tax rate gets created and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.create.after|This event will be fired after tax rate gets created and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.update.before|This event will be fired before tax rate gets updated and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.update.after|This event will be fired after tax rate gets updated and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.delete.before|This event will be fired before tax rate gets deleted and you may create a listener file and perform the respective operation when that event fires|
|tax.tax_rate.delete.after|This event will be fired after tax rate gets deleted and you may create a listener file and perform the respective operation when that event fires|
|user.role.create.before|This event will be fired before user role gets created. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.role.create.after|This event will be fired after user role gets created. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.role.update.before|This event will be fired before user role gets updated. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.role.update.after|This event will be fired after user role gets updated. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.role.delete.before|This event will be fired before user role gets updated. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.role.delete.after|This event will be fired after user role gets deleted. The role of user in created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.create.before|This event will be fired before user gets created. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.delete.after|This event will be fired after user gets deleted. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.update.before|This event will be fired before user gets updated. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.update.after|This event will be fired after user gets updated. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.delete.before|This event will be fired before user gets deleted. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.delete.after|This event will be fired after user gets deleted. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.delete.before|This event will be fired before user gets deleted. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|
|user.admin.delete.after|This event will be fired after user gets deleted. The user gets created from admin panel and you may create a listener file and perform the respective operation when that event fires|

## Events Listen in Bagisto

| Events name                     | functionality |
| ------------------------------- | ------------- |
| checkout.order.save.after       | This event will be fired after order creation and listen in `ProductFlat` listener file to send new order mail from `sendNewOrderMail` function  |
| sales.invoice.save.after        | This event will be fired after invoice details have been saved and listen in `ProductFlat` listener file to send new invoice mail from `sendNewInvoiceMail` function  |
| sales.shipment.save.after       | This event will be fired after shipment details have been saved and listen in `ProductFlat` listener file to send new shipment mail from `sendNewShipmentMail` function  |
| checkout.order.save.after       | This event will be fired after order has been created  and will listen in `ProductFlat` listener file  to update product inventory from `updateProductInventory` function  |
| catalog.attribute.create.after  | This event will be fired after attribute has been created and listen in `ProductFlat` listener file  from `afterAttributeCreatedUpdated` function  |
| catalog.attribute.update.after  | This event will be fired after attribute has updated and listen in `ProductFlat` listener file  from `afterAttributeCreatedUpdated` function  |
| catalog.attribute.delete.before | This event will be fired before attribute has been delete and listen in `ProductFlat` listener file  from `afterAttributeDeleted` function  |
| catalog.product.create.after    | This event will be fired after product has been creation and listen in `ProductFlat` listener file  from `afterProductCreatedUpdated` function  |
| catalog.product.update.after    | This event will be fired after product has been updated and listen in `ProductFlat` listener file  from `afterProductCreatedUpdated` function  |

## Listen Existing Event

As above, all events used in bagisto are listed here so you may change or edit the listener function such as- `sendNewOrderMail` that is defined in `productFlat` listener file, so you can edit and perform the required operation

~~~php
class EventServiceProvider extends ServiceProvider
{
    /**
     * Bootstrap services.
     *
     * @return void
     */
    public function boot()
    {
        Event::listen('checkout.order.save.after', 'Webkul\Admin\Listeners\Order@sendNewOrderMail');
    }
}
~~~
